Написан ряд тестов